test/modules/bradc/modPathDefinesMain/foo3.good
<command line>: error: unknown main module due to multiple 'proc main's
<command line>: note: please use '--main-module' to disambiguate
foo3.chpl:4: note: found 'proc main' in module 'M1'
foo3.chpl:12: note: found 'proc main' in module 'M2'
